# rka

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  Dockerfile  LICENSE  README.md  RKA_v2_Design_Document.md  USAGE_GUIDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: cleanup-merged-branches.yml  pytest.yml
docs/: RKA_v2.1_Design_Document.md  RKA_v2.1_Phase0-1_Execution_Brief.md  RKA_v2_Design_Document.md  RKA_v2_User_Manual.docx  Researcher-Heartbeat-Debugging-Notes.md  USER_MANUAL.md  ai_tool_discoverability_spec.md  openclaw-setup.md  v2.1_example_research_plan.md
docs/archive/: RKA_v2_Design_Document.md
docs/templates/: HEARTBEAT.md  executor-SOUL.md  researcher-brain-SOUL.md  reviewer-brain-SOUL.md
rka/: __init__.py  cli.py  config.py
rka/api/: app.py  deps.py
rka/db/: schema.sql  schema_phase2.sql
rka/infra/: database.py  embeddings.py  files.py  ids.py  llm.py  llm_models.py
rka/mcp/: server.py
rka/models/: __init__.py  agent_role.py  audit.py  calibration.py  checkpoint.py  claim.py  context.py  decision.py  decision_option.py  event.py  hooks.py  journal.py  knowledge_pack.py  literature.py  mission.py  orchestration.py  project.py  review_queue.py  role_event.py  topic.py  workspace.py
rka/services/: academic.py  agent_roles.py  artifacts.py  audit.py  backfill.py  base.py  calibration.py  checkpoints.py  claims.py  clusters.py  (+26 more)
scripts/: research_project_CLAUDE.md  tunnel.sh  v2.1_demo_project.py
skills/: SKILL.md
tests/: conftest.py
web/: README.md  package-lock.json  package.json  vite.config.ts
(+151 files in other folders)
